--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,15 +1,64 @@
+body{
+    background-color: hsl(0, 0%, 95%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
+}
 .container{
     display: flex;
-    justify-content: center;
     flex-direction: column;
     align-items: center;
 }
 
 .container2{
     display: flex;
-    display: space-between;
-    justify-content: center;
     flex-direction: row;
+    align-items: center;
+}
+
+.cityInput{
+    padding: 10px;
+    font-size: 1rem;
+    font-weight: bold;
+    border: 2px solid hsla(0, 0%, 20%, 0.5);
+    margin: 5px;
+    width: 200px;
+}
+
+button[type="submit"]{
+    padding: 10px 20px;
+    font-size: 1rem;
+    border-radius: 5px;
+}
+
+h1{
+    font-size: 3rem;
+    margin: 5px;
+}
+
+p{
+    font-size: 1.5rem;
+    margin: 5px 0;
+}
+
+#currentDay{
+    border: 1px solid black;
+    background-color: rgba(0, 255, 255, 0.383);
+    box-shadow: 2px 2px 5px black;
+    margin: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#day{
+    margin: 10px;
+    border: 1px solid black;
+    background-color: rgba(0, 255, 255, 0.383);
+    box-shadow: 2px 2px 5px black;
+    display: flex;
+    flex-direction: column;
     align-items: center;
 }
 
