--- a/styles/styles.css
+++ b/styles/styles.css
@@ -37,8 +37,13 @@ h1{
     margin: 5px;
 }
 
+h2{
+    padding-top: 5px;
+    margin: 0px;
+}
+
 p{
-    font-size: 1.5rem;
+    font-size: 1rem;
     margin: 5px 0;
 }
 
@@ -50,6 +55,8 @@ p{
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 300px;
+    height: 300px;
 }
 
 #day{
