minor code changes and css changes

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,7 @@
 body{
-    background-color: hsl(0, 0%, 95%);
+    background-color: Canvas;
+    color: CanvasText;
+    color-scheme: light dark;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -8,12 +10,6 @@ body{
 .container{
     display: flex;
     flex-direction: column;
-    align-items: center;
-}
-
-.container2{
-    display: flex;
-    flex-direction: row;
     align-items: center;
 }
 
@@ -49,7 +45,7 @@ p{
 
 #currentDay{
     border: 1px solid black;
-    background-color: rgba(0, 255, 255, 0.383);
+    background-color: #8b8b8b;
     box-shadow: 2px 2px 5px black;
     margin: 10px;
     display: flex;
@@ -59,6 +55,7 @@ p{
     height: 300px;
 }
 
+/* For the 7 day forecast that currently has no functionality */
 #day{
     margin: 10px;
     border: 1px solid black;
@@ -69,3 +66,8 @@ p{
     align-items: center;
 }
 
+.container2{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
